--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     <header>
         <div class="inner">
             <h1>Shkaf54</h1>
-            <h3>Сшкафы купе под ключ</h3>
+            <h3>Двери для шкафов-купе с фотопечатью</h3>
             <div class="contacts">
                 <span>8(383)-287-45-75</span>
                 <br/>
@@ -34,18 +34,17 @@
             <section id="panels" class="ttuc">
                 <img src="./images/panels.jpg" />
                 <div id="panels-title">
-                    <h2 id="panels-title-l1">Шкафы купе</span>
-                    <h4 id="panels-title-l2">из особо прочного закалённого стекла</span>
+                    <h2 id="panels-title-l1">Двери для шкафов-купе с фотопечатью</span>
                 </div>
-                <span id="panels-feature1">повышенная прочность</span>
-                <span id="panels-feature2">повышенная термостойкость</span>
-                <span id="panels-feature3">безопасность при разрушении</span>
+                <span id="panels-feature1">Замена старых дверей шкафа-купе на новые с фотопечатью</span>
+                <span id="panels-feature2">Установка новых дверей с фотопечатью в гардеробные, ниши и т.д.</span>
             </section>
 
             <section id="design-text">
                 <div id="design-instagram">
-                    <p> Дизайн. Создание макетов с учетом пожеланий клиента (подбор под цвет интерьера, сделаем визуализации, 
-                        найдем картинки из каталогов других производителей, работа с платным контентом изображений).</p>
+                    <p> Дизайн. Создание макетов для дверей с фотпечатью с учетом пожеланий клиента 
+                        (подбор под цвет интерьера, сделаем визуализации, найдем картинки из каталогов других производителей, 
+                        работа с платным контентом изображений).</p>
 
                     <a id="instagram-link" href="https://www.instagram.com/fartuk54/" target="_blank">
                         <img src="./images/instagram.jpg">
@@ -80,7 +79,7 @@
                     <div id="schema-step-1" class="schema-step">
                         <h4 class="ttuc">1. Замер, заявка</h4>
                         <p>
-                            Бесплатный вызов на дом (производится после установки кухни, при выведенных розетках) С 8:00 до 20:00 ежедневно
+                            Бесплатный вызов на дом с 8:00 до 20:00 ежедневно
                         </p>
                     </div>
                     <div id="schema-step-2" class="schema-step">
@@ -113,8 +112,9 @@
             </section>
 
             <section id="production-text">
-                <p>Производство. Изготовление стеклоизделия с учетом технологических особенностей (прямая УФ-печать, армирование
-                    пленкой, длина стекла без разделения — до 3195 мм).</p>
+                <p>Производство. Изготовление стеклоизделия с учетом технологических особенностей 
+                    (прямая УФ-печать, армирование пленкой. 
+                    Варианты исполнения: фотопечать, однотонный цвет, специальные декорирующие плёнки.</p>
             </section>
 
             <section id="catalog-actions">
@@ -129,8 +129,8 @@
 
             <section id="mount-block">
                 <div id="mount-text">
-                    <p>Установка. Бригада специалистов выполнит замер, доставку, монтаж различной сложности с минимальным количеством
-                        стыков. Гарантия — 3 года на наш монтаж с закаленными стеклами.</p>
+                    <p>Установка. Бригада специалистов выполнит замер, доставку, монтаж различной сложности. 
+                    Гарантия — 1 год на наш монтаж.</p>
                 </div>
 
                 <div id="call-request" title="Заявка на замер">
